--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>RPS</title>
 </head>
 <body>
     <div>
-        Hello Mohammed
+    <h1 class="header">Rock Paper Scissors</h1>
     </div>
-    <div>
-        Hello youssef
-    </div>
+
+     <div class="counter_container">
+         <div class="small_tag"> <span>User</span></div>
+         0:0
+         <div class="small_tag"><span>Comp</span></div>
+     </div>
+    
+     <div class="body_parag"> Messager Result</div>
+
+     <div class="btns_container">
+          <div class="btn_action">✌</div>
+          <div class="btn_action" >✊</div>
+          <div class="btn_action">✋</div>
+     </div>
+     <p>Make ur move.</p>
 </body>
 </html>
