--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
      <p class="first_para">Messager Result</p>
 
      <div class="btns_container">
-          <div class="btn_action">✌</div>
-          <div class="btn_action" >✊</div>
-          <div class="btn_action">✋</div>
+          <div class="btn_action" id="scissor">✌</div>
+          <div class="btn_action" id="rock">✊</div>
+          <div class="btn_action" id="paper">✋</div>
      </div>
 
      <p class="last_para">Make ur move.</p>
